# AgiotaBot

./: README.md  emprestimo.py  main.py  pyproject.toml
AgiotaBot/: pyvenv.cfg
AgiotaBot/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
