[tool.poetry]
name = "agiotabot"
version = "0.1.0"
description = ""
authors = ["Bruno Patrick <contatobrunopatrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
